introduction display on mobile fixed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,52 +5,73 @@
 #introduction {
   background: url('https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
   background-repeat: no-repeat;
-  height: 95vh;
+  min-height: 95vh;
+  height: auto;
   background-size: cover;
   background-attachment: fixed;
   z-index: -1;
 }
 
-@media only screen and (max-width: 380px) {
-  #introduction {
-    height: 280vh;
-  }
-
-  #projects {
-    height: auto;
-  }
-
-  #certifications {
-    height: auto;
-  }
+.flex-container{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display:flex; 
+  flex-direction: column;
+  align-items: center; 
+  min-height: 95vh; 
+  height: auto; 
 }
 
-@media only screen and (min-width: 381px) {
-  #introduction {
-    height: 210vh;
-  }
+#photo{
+  height: 150px;
+  width: 150px;
+}
 
+.p{
+  font-size: 1rem;
+}
+
+#projects {
+  height: auto;
+}
+
+#certifications {
+  height: auto;
+}
+
+.mb{
+  margin-bottom: 150px;
+}
+
+@media only screen and (min-width: 350px) {
+  #photo{
+    height: 250px;
+    width: 250px;
+  }
   .p {
+    font-size: 1.2rem;
     text-align: justify;
   }
 
-  #projects {
-    height: auto;
-  }
-
-  #certifications {
-    height: auto;
-  }
 }
 
-@media only screen and (min-width: 750px) {
-  #introduction {
-    height: 120vh;
+@media only screen and (min-width: 1050px) {
+
+  .flex-container{
+    flex-direction: row;
   }
 
   #photo {
-    height: 250px;
-    width: 250px;
+    height: 350px;
+    width: 350px;
+  }
+
+  h1{
+    font-size: 2.5rem;
+  }
+
+  .p{
+    font-size: 1.6rem;
   }
 
   #text {
